--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             <h2>We Are Designers</h2>
                             <p>We know  that how actualy design things that change the world</p>
                             <div class="cta-row">
-                                <a href="#" class="btn btn-white">Contact us</a>
+                                <a href="#contact-section" class="btn btn-white">Contact us</a>
                             </div><!--/.cta-row-->
                         </div><!--/.container-->
                     </div><!--/.slider-content-->
@@ -113,7 +113,7 @@
                             <h2>We Are Engineers</h2>
                             <p>We are acomplished to give perfect solution for your need</p>
                             <div class="cta-row">
-                                <a href="#" class="btn btn-white">Contact us</a>
+                                <a href="#contact-section" class="btn btn-white">Contact us</a>
                             </div><!--/.cta-row-->
                         </div><!--/.container-->
                     </div><!--/.slider-content-->
