--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                         </div><!--/.getintouch-->
                         <div class="email-col getintouch">
                         	<i class="fa fa-envelope" aria-hidden="true"></i>
-                        	<span><a href="mailto:kevelayinfotech@gmail.com">kevelayinfotech@gmail.com</a></span>
+                        	<span><a href="mailto:kevalayinfotech@gmail.com">kevalayinfotech@gmail.com</a></span>
                         </div><!--/.getintouch-->
                     </div><!--/.widget-->
                 </div><!--/.col-->
